improve filter page

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -476,8 +476,6 @@
 "排序" = "排序";
 
 "常规歌曲" = "常规歌曲";
-"传统活动" = "传统活动";
-"Groove活动" = "Groove活动";
 "最大难度" = "最大难度";
 
 "已付声" = "已付声";
@@ -492,3 +490,13 @@
 "生日" = "生日";
 
 "活动名" = "活动名";
+"传统活动" = "传统活动";
+"Groove活动" = "Groove活动";
+"巡演活动" = "巡演活动";
+"篷车活动" = "篷车活动";
+"协力活动" = "协力活动";
+
+"全部" = "全部";
+"低确率" = "低确率";
+"中确率" = "中确率";
+"高确率" = "高确率";
