--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -480,8 +480,6 @@
 "排序" = "ソート";
 
 "常规歌曲" = "通常曲";
-"传统活动" = "ｱﾀﾎﾟﾝ形式ｲﾍﾞﾝﾄ";
-"Groove活动" = "Grooveｲﾍﾞﾝﾄ";
 "最大难度" = "難易度";
 
 "已付声" = "ＣＶあり";
@@ -494,3 +492,16 @@
 "五十音" = "五十音";
 "游戏编号" = "ゲーム内番号";
 "生日" = "誕生日";
+
+"活动名" = "活动名";
+"传统活动" = "アタポン形式イベント";
+"Groove活动" = "Grooveイベント";
+"巡演活动" = "LIVE Parade";
+"篷车活动" = "シンデレラキャラバン";
+"协力活动" = "LIVE Party!!";
+
+"全部" = "全部";
+"低确率" = "低确率";
+"中确率" = "中确率";
+"高确率" = "高确率";
+
