--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -477,8 +477,6 @@
 "排序" = "排序";
 
 "常规歌曲" = "常規歌曲";
-"传统活动" = "傳統活動";
-"Groove活动" = "Groove活動";
 "最大难度" = "最大難度";
 
 "已付声" = "已付聲";
@@ -491,3 +489,16 @@
 "五十音" = "五十音";
 "游戏编号" = "遊戲編號";
 "生日" = "生日";
+
+"活动名" = "活動名";
+"传统活动" = "傳統活動";
+"Groove活动" = "Groove活動";
+"巡演活动" = "巡演活動";
+"篷车活动" = "篷車活動";
+"协力活动" = "協力活動";
+
+"全部" = "全部";
+"低确率" = "低確率";
+"中确率" = "中確率";
+"高确率" = "高確率";
+
