--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -460,22 +460,22 @@
 "* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限・平均スコアは全PERFECTとして計算しています\n* 極限スコアはスキル100%発動として計算しています\n* 平均スコアは100回シミュレートを行い平均値を計算しているため、結果は毎回異なります\n* 平均スコアはセンター効果による特技発動確率アップの影響を受けていません\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています。";
 
 /* new in v1.2.0 */
-"捐赠" = "捐赠";
-"为什么会有这个页面？" = "为什么会有这个页面？";
-"CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会加入任何影响您使用的广告。CGSSGuide的开发和后端服务器的维护需要您的支持，如果您喜欢这款应用，请支持我们。" = "CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会加入任何影响您使用的广告。CGSSGuide的开发和后端服务器的维护需要您的支持，如果您喜欢这款应用，请支持我们。";
-"捐赠的钱款将用在什么地方？" = "捐赠的钱款将用在什么地方？";
-"您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。" = "您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。";
-"您也可以通过点击下方的广告来支持我们。" = "您也可以通过点击下方的广告来支持我们。";
-"您的设备未开启应用内购买。" = "您的设备未开启应用内购买。";
+"捐赠" = "寄付する";
+"为什么会有这个页面？" = "このページについて";
+"CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会加入任何影响您使用的广告。CGSSGuide的开发和后端服务器的维护需要您的支持，如果您喜欢这款应用，请支持我们。" = "CGSSGuideは、「有料な機能」または「広告」が一切入ってない完全無料アプリであり、これからも引き続きプロデューサーの皆様に無料で提供したいと思ってます。しかし、開発やバックエンドサーバーの維持などには費用が必要で、私たち個人の力ではこれからのアプリ運営を維持することが大変難しいです。これからの、CGSSGuideの運営は、皆様の応援が必要です。このアプリを気に入った方、もしくはこのアプリは使いやすいと思っている方がいらっしゃったら、ぜひ、私たちを応援してください。";
+"捐赠的钱款将用在什么地方？" = "寄付金の用途について";
+"您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。" = "あなたの寄付金は主に、CGSSGuideの使ってるバックエンドサーバー利用料金や、ドメインネーム利用料金、及びApple開発者用アカウントの利用料金に使わせていただきます。";
+"您也可以通过点击下方的广告来支持我们。" = "（ページ下側の広告クリックも、応援することができます。）";
+"您的设备未开启应用内购买。" = "あなたの端末にはアプリ内購入機能を有効にしておりません。";
 
 "已收藏" = "ブクマした";
 "未收藏" = "ブクマしない";
-"更新时间" = "アップデート時間";
+"更新时间" = "更新時間";
 "稀有度" = "レア度";
 "相册编号" = "アルバム順";
 
-"降序" = "降序";
-"升序" = "升序";
+"降序" = "降順";
+"升序" = "昇順";
 "筛选" = "フィルタ";
 "排序" = "ソート";
 
@@ -493,7 +493,7 @@
 "游戏编号" = "ゲーム内番号";
 "生日" = "誕生日";
 
-"活动名" = "活动名";
+"活动名" = "イベント";
 "传统活动" = "アタポン形式イベント";
 "Groove活动" = "Grooveイベント";
 "巡演活动" = "LIVE Parade";
@@ -501,18 +501,18 @@
 "协力活动" = "LIVE Party!!";
 
 "全部" = "全部";
-"低确率" = "低确率";
-"中确率" = "中确率";
-"高确率" = "高确率";
+"低确率" = "低確率";
+"中确率" = "中確率";
+"高确率" = "高確率";
 
 "待定" = "待定";
 "上位" = "上位";
 "下位" = "下位";
-"活动曲" = "活动曲";
+"活动曲" = "イベント曲";
 
-"卡池名称或描述" = "卡池名称或描述";
-"限定卡池" = "限定卡池";
-"FES限定卡池" = "FES限定卡池";
-"单属性卡池" = "单属性卡池";
-"普通卡池" = "普通卡池";
+"卡池名称或描述" = "ガシャ";
+"限定卡池" = "限定ガシャ";
+"FES限定卡池" = "FES限ガシャ";
+"单属性卡池" = "タイプセレクト";
+"普通卡池" = "通常ガシャ";
 
