--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -463,6 +463,7 @@
 "CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会加入任何影响您使用的广告。CGSSGuide的开发和后端服务器的维护需要您的支持，如果您喜欢这款应用，请支持我们。" = "CGSSGuide is a free application, and will not add any paid feature or annoyed advertisement. CGSSGuide needs your supporting for the future development and server costs. If you like this application, please support us.";
 "捐赠的钱款将用在什么地方？" = "What is the donation for?";
 "您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。" = "The donation will be used at server costs, domain name costs, developer account costs, and server updating costs.";
+"无论您是否曾经捐赠，广告都仅存在于捐赠页面内。" = "The ad. is only within this page either donated or not.";
 "您也可以通过点击下方的广告来支持我们。" = "Click the ad. to support us.";
 "您的设备未开启应用内购买。" = "Your device do not allow in-app purchasing";
 
