--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -462,6 +462,7 @@
 "CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会加入任何影响您使用的广告。CGSSGuide的开发和后端服务器的维护需要您的支持，如果您喜欢这款应用，请支持我们。" = "CGSSGuide是一款免費應用，現在以及未來都不會增加任何需要收費開啟的功能，也不會加入任何影響您使用的廣告。CGSSGuide的開發和後端伺服器的維護需要您的支援，如果您喜歡這款應用，請支援我們。";
 "捐赠的钱款将用在什么地方？" = "捐贈的錢款將用在什麼地方？";
 "您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。" = "您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。";
+"无论您是否曾经捐赠，广告都仅存在于捐赠页面内。" = "無論您是否曾經捐贈，廣告都僅存在於捐贈頁面內。";
 "您也可以通过点击下方的广告来支持我们。" = "您也可以通過點選下方的廣告來支援我們。";
 "您的设备未开启应用内购买。" = "您的裝置未開啟應用內購買。";
 
