--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -433,7 +433,7 @@
 
 /* new in 1.1.3 */
 /* 耗时任务处理过程提示框 */
-"处理中..." = "計算中";
+"处理中..." = "処理中";
 
 /* 清除缓存时 选择具体的清除项 */
 "请等待更新完成或手动取消更新后，再尝试清除数据。" = "現在進行中の更新が終わるまでお待ち下さい。または、手動で更新をキャンセルした後、再びデータを削除してください";
