add 3d model, sign and card image entries for card detail page

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -513,3 +513,11 @@
 "单属性卡池" = "单属性卡池";
 "普通卡池" = "普通卡池";
 
+
+/* new in v1.2.1 */
+"3D模型" = "3D模型";
+"卡片图" = "卡片图";
+"签名图" = "签名图";
+"服装" = "服装";
+"SSR服装" = "SSR服装";
+
