--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -517,3 +517,12 @@
 "单属性卡池" = "タイプセレクト";
 "普通卡池" = "通常ガシャ";
 
+
+/* new in v1.2.1 */
+"3D模型" = "3D模型";
+"卡片图" = "卡片图";
+"签名图" = "签名图";
+"服装" = "服装";
+"SSR服装" = "SSR服装";
+
+
