--- a/CGSSGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -517,3 +517,11 @@
 "FES限定卡池" = "FES限定卡池";
 "单属性卡池" = "單屬性卡池";
 "普通卡池" = "普通卡池";
+
+/* new in v1.2.1 */
+"3D模型" = "3D模型";
+"卡片图" = "卡片圖";
+"签名图" = "簽名圖";
+"服装" = "服裝";
+"SSR服装" = "SSR服裝";
+
