--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -518,11 +518,25 @@
 "普通卡池" = "通常ガシャ";
 
 
-/* new in v1.2.1 */
+/* new in v1.2.0(7+) */
 "3D模型" = "3D模型";
 "卡片图" = "卡片图";
 "签名图" = "签名图";
 "服装" = "服装";
 "SSR服装" = "SSR服装";
 
+"活动pt档位" = "活动pt档位";
+"歌曲分数档位" = "歌曲分数档位";
+"查看完整图表" = "查看完整图表";
 
+"最后更新时间：" = "最后更新时间：";
+"当前Pt" = "当前Pt";
+"增速(/h)" = "增速(/h)";
+"最终Pt" = "最终Pt";
+"当前分数" = "当前分数";
+"最终分数" = "最终分数";
+
+// 图表中点击某点后出现的描述文字 后面跟着分数或pt值
+"%d日%d时%d分" = "%1$d日%2$d时%3$d分";
+// 图表的x轴文字要尽可能短
+"%d日%d时" = "%1$d日%2$d时";
