--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -515,10 +515,25 @@
 "普通卡池" = "普通卡池";
 
 
-/* new in v1.2.1 */
+/* new in v1.2.0(7+) */
 "3D模型" = "3D模型";
 "卡片图" = "卡片圖";
 "签名图" = "簽名圖";
 "服装" = "服裝";
 "SSR服装" = "SSR服裝";
 
+"活动pt档位" = "活動pt檔位";
+"歌曲分数档位" = "歌曲分數檔位";
+"查看完整图表" = "檢視完整圖表";
+
+"最后更新时间：" = "最後更新時間：";
+"当前Pt" = "當前Pt";
+"增速(/h)" = "增速(/h)";
+"最终Pt" = "最終Pt";
+"当前分数" = "當前分數";
+"最终分数" = "最終分數";
+
+// 图表中点击某点后出现的描述文字 后面跟着分数或pt值
+"%d日%d时%d分" = "%1$d日%2$d時%3$d分";
+// 图表的x轴文字要尽可能短
+"%d日%d时" = "%1$d日%2$d時";
