--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -523,7 +523,7 @@
 "SSR服装" = "SSR Dress";
 
 "活动pt档位" = "Event Pt. Ranking";
-"歌曲分数档位" = "Event Song Score Ranking";
+"歌曲分数档位" = "High Score Ranking";
 "查看完整图表" = "Full ranking chart";
 
 "最后更新时间：" = "Last updated time:";
@@ -534,7 +534,7 @@
 "最终分数" = "Final Score";
 
 // 图表中点击某点后出现的描述文字 后面跟着分数或pt值
-"%d日%d时%d分" = "%1$d,%2$d:%3$d ";
+"%d日%d时%d分" = "%1$d(%2$d:%3$d) ";
 // 图表的x轴文字要尽可能短
-"%d日%d时" = "%1$d,%2$d";
+"%d日%d时" = "%1$d(%2$d)";
 
