update "support us" page

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -456,13 +456,21 @@
 "数据服务器存在异常，请您稍后再尝试更新。" = "数据服务器存在异常，请您稍后再尝试更新。";
 
 /* new in v1.2.0 */
-"捐赠" = "捐赠";
+//"捐赠" = "捐赠";
+"支持作者" = "支持作者";
 "为什么会有这个页面？" = "为什么会有这个页面？";
-"CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会加入任何影响您使用的广告。CGSSGuide的开发和后端服务器的维护需要您的支持，如果您喜欢这款应用，请支持我们。" = "CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会加入任何影响您使用的广告。CGSSGuide的开发和后端服务器的维护需要您的支持，如果您喜欢这款应用，请支持我们。";
-"捐赠的钱款将用在什么地方？" = "捐赠的钱款将用在什么地方？";
-"您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。" = "您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。";
-"广告仅存在于捐赠页面内。" = "广告仅存在于捐赠页面内。";
-"您也可以通过点击下方的广告来支持我们。" = "您也可以通过点击下方的广告来支持我们。";
+//"CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会加入任何影响您使用的广告。CGSSGuide的开发和后端服务器的维护需要您的支持，如果您喜欢这款应用，请支持我们。" = "CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会加入任何影响您使用的广告。CGSSGuide的开发和后端服务器的维护需要您的支持，如果您喜欢这款应用，请支持我们。";
+"CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会使用常驻广告进行盈利。但是CGSSGuide的开发和所使用的服务器的维持都需要一定资金的支持，如果您喜欢这款应用，请支持我们。" = "CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会使用常驻广告进行盈利。但是CGSSGuide的开发和所使用的服务器的维持都需要一定资金的支持，如果您喜欢这款应用，请支持我们。";
+
+//"捐赠的钱款将用在什么地方？" = "捐赠的钱款将用在什么地方？";
+"如何支持我们？" = "如何支持我们？";
+
+//"您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。" = "您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。";
+"您可以通过购买下面的两个商品来支持本程序，购买任何一个商品都将移除本页面下方的广告。" = "您可以通过购买下面的两个商品来支持本程序，购买任何一个商品都将移除本页面下方的广告。";
+
+"广告仅存在于本页面内。" = "广告仅存在于本页面内。";
+"感谢您的支持，广告已经被移除。" = "感谢您的支持，广告已经被移除。";
+//"您也可以通过点击下方的广告来支持我们。" = "您也可以通过点击下方的广告来支持我们。";
 "您的设备未开启应用内购买。" = "您的设备未开启应用内购买。";
 
 "已收藏" = "已收藏";
