--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -460,13 +460,25 @@
 "* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限・平均スコアは全PERFECTとして計算しています\n* 極限スコアはスキル100%発動として計算しています\n* 平均スコアは100回シミュレートを行い平均値を計算しているため、結果は毎回異なります\n* 平均スコアはセンター効果による特技発動確率アップの影響を受けていません\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています。";
 
 /* new in v1.2.0 */
-"捐赠" = "寄付する";
+//"捐赠" = "寄付する";
+"支持作者" = "支持作者";
+
 "为什么会有这个页面？" = "このページについて";
-"CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会加入任何影响您使用的广告。CGSSGuide的开发和后端服务器的维护需要您的支持，如果您喜欢这款应用，请支持我们。" = "CGSSGuideは、「有料な機能」または「広告」が一切入ってない完全無料アプリであり、これからも引き続きプロデューサーの皆様に無料で提供したいと思ってます。しかし、開発やバックエンドサーバーの維持などには費用が必要で、私たち個人の力ではこれからのアプリ運営を維持することが大変難しいです。これからの、CGSSGuideの運営は、皆様の応援が必要です。このアプリを気に入った方、もしくはこのアプリは使いやすいと思っている方がいらっしゃったら、ぜひ、私たちを応援してください。";
-"捐赠的钱款将用在什么地方？" = "寄付金の用途について";
-"您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。" = "あなたの寄付金は主に、CGSSGuideの使ってるバックエンドサーバー利用料金や、ドメインネーム利用料金、及びApple開発者用アカウントの利用料金に使わせていただきます。";
-"广告仅存在于捐赠页面内。" = "広告は寄付ページ以外の画面に表示されません。";
-"您也可以通过点击下方的广告来支持我们。" = "ページ下側の広告クリックも、応援することができます。";
+
+//"CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会加入任何影响您使用的广告。CGSSGuide的开发和后端服务器的维护需要您的支持，如果您喜欢这款应用，请支持我们。" = "CGSSGuideは、「有料な機能」または「広告」が一切入ってない完全無料アプリであり、これからも引き続きプロデューサーの皆様に無料で提供したいと思ってます。しかし、開発やバックエンドサーバーの維持などには費用が必要で、私たち個人の力ではこれからのアプリ運営を維持することが大変難しいです。これからの、CGSSGuideの運営は、皆様の応援が必要です。このアプリを気に入った方、もしくはこのアプリは使いやすいと思っている方がいらっしゃったら、ぜひ、私たちを応援してください。";
+"CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会使用常驻广告进行盈利。但是CGSSGuide的开发和所使用的服务器的维持都需要一定资金的支持，如果您喜欢这款应用，请支持我们。" = "CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会使用常驻广告进行盈利。但是CGSSGuide的开发和所使用的服务器的维持都需要一定资金的支持，如果您喜欢这款应用，请支持我们。";
+
+//"捐赠的钱款将用在什么地方？" = "寄付金の用途について";
+"如何支持我们？" = "如何支持我们？";
+
+//"您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。" = "あなたの寄付金は主に、CGSSGuideの使ってるバックエンドサーバー利用料金や、ドメインネーム利用料金、及びApple開発者用アカウントの利用料金に使わせていただきます。";
+"您可以通过购买下面的两个商品来支持本程序，购买任何一个商品都将移除本页面下方的广告。" = "您可以通过购买下面的两个商品来支持本程序，购买任何一个商品都将移除本页面下方的广告。";
+
+//"广告仅存在于捐赠页面内。" = "広告は寄付ページ以外の画面に表示されません。";
+"广告仅存在于本页面内。" = "广告仅存在于本页面内。";
+
+"感谢您的支持，广告已经被移除。" = "感谢您的支持，广告已经被移除。";
+//"您也可以通过点击下方的广告来支持我们。" = "ページ下側の広告クリックも、応援することができます。";
 "您的设备未开启应用内购买。" = "あなたの端末にはアプリ内購入機能を有効にしておりません。";
 
 "已收藏" = "ブクマした";
