--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -457,13 +457,13 @@
 "数据服务器存在异常，请您稍后再尝试更新。" = "資料伺服器存在異常，請您稍後再嘗試更新。";
 
 /* new in v1.2.0 */
-"捐赠" = "捐贈";
+"支持作者" = "支援作者";
 "为什么会有这个页面？" = "為什麼會有這個頁面？";
-"CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会加入任何影响您使用的广告。CGSSGuide的开发和后端服务器的维护需要您的支持，如果您喜欢这款应用，请支持我们。" = "CGSSGuide是一款免費應用，現在以及未來都不會增加任何需要收費開啟的功能，也不會加入任何影響您使用的廣告。CGSSGuide的開發和後端伺服器的維護需要您的支援，如果您喜歡這款應用，請支援我們。";
-"捐赠的钱款将用在什么地方？" = "捐贈的錢款將用在什麼地方？";
-"您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。" = "您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。";
-"广告仅存在于捐赠页面内。" = "廣告僅存在於捐贈頁面內。";
-"您也可以通过点击下方的广告来支持我们。" = "您也可以通過點選下方的廣告來支援我們。";
+"CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会使用常驻广告进行盈利。但是CGSSGuide的开发和所使用的服务器的维持都需要一定资金的支持，如果您喜欢这款应用，请支持我们。" = "CGSSGuide是一款免費應用，現在以及未來都不會增加任何需要收費開啟的功能，也不會使用常駐廣告進行盈利。但是CGSSGuide的開發和所使用的伺服器的維持都需要一定資金的支援，如果您喜歡這款應用，請支援我們。";
+"如何支持我们？" = "如何支援我們？";
+"您可以通过购买下面的两个商品来支持本程序，购买任何一个商品都将移除本页面下方的广告。" = "您可以通過購買下面的兩個商品來支援本程式，購買任何一個商品都將移除本頁面下方的廣告。";
+"广告仅存在于本页面内。" = "廣告僅存在於本頁面內。";
+"感谢您的支持，广告已经被移除。" = "感謝您的支援，廣告已經被移除。";
 "您的设备未开启应用内购买。" = "您的裝置未開啟應用內購買。";
 
 "已收藏" = "已收藏";
