--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -461,23 +461,23 @@
 
 /* new in v1.2.0 */
 //"捐赠" = "寄付する";
-"支持作者" = "支持作者";
+"支持作者" = "開発者を応援する";
 
 "为什么会有这个页面？" = "このページについて";
 
 //"CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会加入任何影响您使用的广告。CGSSGuide的开发和后端服务器的维护需要您的支持，如果您喜欢这款应用，请支持我们。" = "CGSSGuideは、「有料な機能」または「広告」が一切入ってない完全無料アプリであり、これからも引き続きプロデューサーの皆様に無料で提供したいと思ってます。しかし、開発やバックエンドサーバーの維持などには費用が必要で、私たち個人の力ではこれからのアプリ運営を維持することが大変難しいです。これからの、CGSSGuideの運営は、皆様の応援が必要です。このアプリを気に入った方、もしくはこのアプリは使いやすいと思っている方がいらっしゃったら、ぜひ、私たちを応援してください。";
-"CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会使用常驻广告进行盈利。但是CGSSGuide的开发和所使用的服务器的维持都需要一定资金的支持，如果您喜欢这款应用，请支持我们。" = "CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会使用常驻广告进行盈利。但是CGSSGuide的开发和所使用的服务器的维持都需要一定资金的支持，如果您喜欢这款应用，请支持我们。";
+"CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会使用常驻广告进行盈利。但是CGSSGuide的开发和所使用的服务器的维持都需要一定资金的支持，如果您喜欢这款应用，请支持我们。" = "CGSSGuideは、「有料な機能」または「広告」が一切入ってない完全無料アプリであり、これからも引き続きプロデューサーの皆様に無料で提供したいと思ってます。しかし、開発やバックエンドサーバーの維持などには費用が必要で、私たち個人の力ではこれからのアプリ運営を維持することが大変難しいです。これからの、CGSSGuideの運営は、皆様の応援が必要です。このアプリを気に入った方、もしくはこのアプリは使いやすいと思っている方がいらっしゃったら、ぜひ、私たちを応援してください。";
 
 //"捐赠的钱款将用在什么地方？" = "寄付金の用途について";
-"如何支持我们？" = "如何支持我们？";
+"如何支持我们？" = "応援方法について";
 
 //"您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。" = "あなたの寄付金は主に、CGSSGuideの使ってるバックエンドサーバー利用料金や、ドメインネーム利用料金、及びApple開発者用アカウントの利用料金に使わせていただきます。";
-"您可以通过购买下面的两个商品来支持本程序，购买任何一个商品都将移除本页面下方的广告。" = "您可以通过购买下面的两个商品来支持本程序，购买任何一个商品都将移除本页面下方的广告。";
+"您可以通过购买下面的两个商品来支持本程序，购买任何一个商品都将移除本页面下方的广告。" = "以下いずれかのアプリ内課金アイテムを購入するで私たちを応援することができます。このページの広告を取り除きます。";
 
 //"广告仅存在于捐赠页面内。" = "広告は寄付ページ以外の画面に表示されません。";
-"广告仅存在于本页面内。" = "广告仅存在于本页面内。";
+"广告仅存在于本页面内。" = "広告はこのページ以外の画面に表示されません。";
 
-"感谢您的支持，广告已经被移除。" = "感谢您的支持，广告已经被移除。";
+"感谢您的支持，广告已经被移除。" = "応援してありがとうございます。広告は取り除きました。";
 //"您也可以通过点击下方的广告来支持我们。" = "ページ下側の広告クリックも、応援することができます。";
 "您的设备未开启应用内购买。" = "あなたの端末にはアプリ内購入機能を有効にしておりません。";
 
