修复 未曾购买过去除广告的用户 直接点击恢复会造成无限loading 无法解除的问题

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -548,3 +548,7 @@
 /* new in 1.2.1 */
 "本程序是非官方程序，与官方应用没有任何关联。所有本程序中使用的游戏相关数据版权所属为：\nBANDAI NAMCO Entertainment Inc.\n\n本程序所使用的非官方数据来源于网络，其版权在不违反官方版权的前提下遵循数据提供者的版权声明。\n\n本程序不能保证所提供的数据真实可靠，由此带来的风险由使用者承担。" = "本程序是非官方程序，与官方应用没有任何关联。所有本程序中使用的游戏相关数据版权所属为：\nBANDAI NAMCO Entertainment Inc.\n\n本程序所使用的非官方数据来源于网络，其版权在不违反官方版权的前提下遵循数据提供者的版权声明。\n\n本程序不能保证所提供的数据真实可靠，由此带来的风险由使用者承担。";
 "本程序基于MIT协议，详情请访问：" = "本程序基于MIT协议，详情请访问：";
+
+"恢复失败" = "恢复失败";
+"您的当前账号未曾购买过去除广告服务。" = "您的当前账号未曾购买过去除广告服务。";
+
