--- a/CGSSGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -181,9 +181,6 @@
 /* 更新框 */
 "数据是最新版本" = "資料是最新版本";
 
-/* 致谢页面 */
-"数据来源：\nhttps://starlight.kirara.ca\nhttp://starlight.hyspace.io\nhttps://deresute.info\nhttps://hoshimoriuta.kirara.ca\nhttp://imascg-slstage-wiki.gamerch.com\n----------------------------------------\n技术支持：\nChieri\nCaiMiao\nstatementreply\nSnack-X\nsummertriangle-dev\n----------------------------------------\n封面设计：\nZXQ\n\n" = "數據來源：\nhttps://starlight.kirara.ca\nhttp://starlight.hyspace.io\nhttps://deresute.info\nhttps://hoshimoriuta.kirara.ca\nhttp://imascg-slstage-wiki.gamerch.com\n----------------------------------------\n技術支援：\nChieri\nCaiMiao\nstatementreply\nSnack-X\nsummertriangle-dev\n----------------------------------------\n封面設計：\nZXQ\n\n";
-
 /* 弹出框标题 */
 "数据缺失" = "資料缺失";
 
@@ -541,6 +538,13 @@
 "恢复" = "恢復";
 
 /* new in 1.2.1 */
-"本程序是非官方程序，与官方应用没有任何关联。所有本程序中使用的游戏相关数据版权所属为：\nBANDAI NAMCO Entertainment Inc.\n\n本程序所使用的非官方数据来源于网络，其版权在不违反官方版权的前提下遵循数据提供者的版权声明。\n\n本程序不能保证所提供的数据真实可靠，由此带来的风险由使用者承担。" = "本程式是非官方程式，與官方應用沒有任何關聯。所有本程式中使用的遊戲相關資料版權所屬為：\nBANDAI NAMCO Entertainment Inc.\n\n本程式所使用的非官方資料來源於網路，其版權在不違反官方版權的前提下遵循資料提供者的版權宣告。\n\n本程式不能保證所提供的資料真實可靠，由此帶來的風險由使用者承擔。";
+"本程序是非官方程序，与官方应用\"アイドルマスターシンデレラガールズ スターライトステージ\"没有任何关联。所有本程序中使用的游戏相关数据版权所属为：\nBANDAI NAMCO Entertainment Inc.\n\n本程序所使用的非官方数据来源于网络，其版权在不违反官方版权的前提下遵循数据提供者的版权声明。\n\n本程序不能保证所提供的数据真实可靠，由此带来的风险由使用者承担。" = "本程式是非官方程式，與官方應用\"アイドルマスターシンデレラガールズ スターライトステージ\"沒有任何關聯。所有本程式中使用的遊戲相關資料版權所屬為：\nBANDAI NAMCO Entertainment Inc.\n\n本程式所使用的非官方資料來源於網路，其版權在不違反官方版權的前提下遵循資料提供者的版權宣告。\n\n本程式不能保證所提供的資料真實可靠，由此帶來的風險由使用者承擔。";
 "本程序基于MIT协议，详情请访问：" = "本程式基於MIT協議，詳情請訪問：";
 
+"恢复失败" = "恢復失敗";
+"您的当前账号未曾购买过去除广告服务。" = "您的當前賬號未曾購買過去除廣告服務。";
+"Data Sources" = "資料來源";
+"Special Thanks to" = "特別鳴謝";
+"Copyright of Game Data" = "遊戲相關資料版權";
+"Copyright of CGSSGuide" = "CGSSGuide版權";
+"Third-party Libraries" = "第三方庫";
