--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -175,9 +175,6 @@
 /* 更新框 */
 "数据是最新版本" = "Up to date!";
 
-/* 致谢页面 */
-"数据来源：\nhttps://starlight.kirara.ca\nhttp://starlight.hyspace.io\nhttps://deresute.info\nhttps://hoshimoriuta.kirara.ca\nhttp://imascg-slstage-wiki.gamerch.com\n----------------------------------------\n技术支持：\nChieri\nCaiMiao\nstatementreply\nSnack-X\nsummertriangle-dev\n----------------------------------------\n封面设计：\nZXQ\n\n" = "Data sources:\nhttps://starlight.kirara.ca\nhttp://starlight.hyspace.io\nhttps://deresute.info\nhttps://hoshimoriuta.kirara.ca\nhttp://imascg-slstage-wiki.gamerch.com\n----------------------------------------\nTechnical support:\nChieri\nCaiMiao\nstatementreply\nSnack-X\nsummertriangle-dev\n----------------------------------------\nIcon:\nZXQ\n\n";
-
 /* 弹出框标题 */
 "数据缺失" = "Missing Data";
 
@@ -541,7 +538,13 @@
 /* 版权声明页面 */
 // "本程序是非官方程序，所有本程序中使用的游戏相关数据版权所属为：\nBANDAI NAMCO Entertainment Inc.\n----------------------------------------\n本程序所使用的卡片、歌曲等数据来源于网络，其版权在不违反官方版权的前提下遵循提供者的版权声明。\n----------------------------------------\n本程序使用的第三方库\nSwiftyJson (MIT License)\nCopyright (c) 2014 Ruoyu Fu\nSDWebImage (MIT License)\nCopyright (c) 2016 Olivier Poitrey\nReachabilitySwift (MIT License)\nCopyright (c) 2016 Ashley Mills\nFMDB (MIT License)\nCopyright (c) 2008-2014 Flying Meat Inc.\nlz4 (BSD License)\nCopyright (c) 2011-2015, Yann Collet\n----------------------------------------\n本程序的所有界面、图标、非官方资源数据、代码基于MIT协议。\n如果对此项目感兴趣，请访问：\nhttps://github.com/superk589/CGSSGuide\n\n" = "This is not an official app. All game data used belongs to the original publisher: BANDAI NAMCO Entertainment Inc.\n----------------------------------------\nThis app uses card, song, and other data fetched from Internet sources. Such data is used in compliance with their original sources' copyright policies.\n----------------------------------------\nThis app uses the following third-party libraries:\nSwiftyJson (MIT License)\nCopyright (c) 2014 Ruoyu Fu\nSDWebImage (MIT License)\nCopyright (c) 2016 Olivier Poitrey\nReachabilitySwift (MIT License)\nCopyright (c) 2016 Ashley Mills\nFMDB (MIT License)\nCopyright (c) 2008-2014 Flying Meat Inc.\nlz4 (BSD License)\nCopyright (c) 2011-2015, Yann Collet\n----------------------------------------\nThe source code of this app is made available under the terms of the MIT license.\nFor more information, please visit the app's GitHub page:\nhttps://github.com/superk589/CGSSGuide\n\n";
 
-"本程序是非官方程序，与官方应用没有任何关联。所有本程序中使用的游戏相关数据版权所属为：\nBANDAI NAMCO Entertainment Inc.\n\n本程序所使用的非官方数据来源于网络，其版权在不违反官方版权的前提下遵循数据提供者的版权声明。\n\n本程序不能保证所提供的数据真实可靠，由此带来的风险由使用者承担。" = "This is not an official app and has no connections with the official app. All game data used belongs to the original publisher: \nBANDAI NAMCO Entertainment Inc.\n\nAll the unofficial data used are fetched from Internet. Such data is used in compliance with their original sources' copyright policies.\n\nCGSSGuide doesn't take responsibility for accuracy of the data. Any risk arising therefrom shall be assumed by your own.";
+"本程序是非官方程序，与官方应用\"アイドルマスターシンデレラガールズ スターライトステージ\"没有任何关联。所有本程序中使用的游戏相关数据版权所属为：\nBANDAI NAMCO Entertainment Inc.\n\n本程序所使用的非官方数据来源于网络，其版权在不违反官方版权的前提下遵循数据提供者的版权声明。\n\n本程序不能保证所提供的数据真实可靠，由此带来的风险由使用者承担。" = "This is not an official app and has no connections with the official app \"アイドルマスターシンデレラガールズ スターライトステージ\". All game data used belongs to the original publisher: \nBANDAI NAMCO Entertainment Inc.\n\nAll the unofficial data used are fetched from Internet. Such data is used in compliance with their original sources' copyright policies.\n\nCGSSGuide doesn't take responsibility for accuracy of the data. Any risk arising therefrom shall be assumed by your own.";
 "本程序基于MIT协议，详情请访问：" = "CGSSGuide is under the terms of the MIT license, for details please visit:";
 
-
+"恢复失败" = "Restoration Failed";
+"您的当前账号未曾购买过去除广告服务。" = "You have not bought an advertisement removing service yet.";
+"Data Sources" = "Data Sources";
+"Special Thanks to" = "Special Thanks to";
+"Copyright of Game Data" = "Copyright of Game Data";
+"Copyright of CGSSGuide" = "Copyright of CGSSGuide";
+"Third-party Libraries" = "Third-party Libraries";
